overzealous plow through getting the rest of the content ready to go

--- a/src/pyrva/templates/components/organizers.html
+++ b/src/pyrva/templates/components/organizers.html
@@ -1,3 +1,8 @@
+{#
+View of the organizers section.
+
+This section displays the organizers of the group. It includes their name, pronouns, role, and social media links.
+#}
 {% macro social_link(name, href, icon) %}
 {% if href %}
 <li>
