--- a/src/pyrva/templates/components/site_nav.html
+++ b/src/pyrva/templates/components/site_nav.html
@@ -1,69 +1,75 @@
+{#
+Top level navigation for the site.
+
+Make sure to keep the links in sync with the sections in the footer.
+#}
+{% set links = [
+{ "anchor": "#", "text": 'Home' },
+{ "anchor": '#about', "text": 'About' },
+{ "anchor": '#community', "text": 'Community' },
+{ "anchor": '#sponsor', "text": 'Sponsors' },
+{ "anchor": '#faq', "text": 'FAQ' },
+] %}
+
+
 {% macro nav_link(request, url, name) %}
+{% set base_style = "inline-flex items-center border-b-2 px-1 pt-1 text-sm font-medium" %}
+{% set active_style = "border-indigo-500 text-gray-900" %}
+{% set inactive_style = "border-transparent text-gray-500 hover:border-gray-300 hover:text-gray-700" %}
 <a href="{{ url }}"
-    class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white {% if request.path == url %}bg-gray-900 text-white{% endif %}">{{
-    name }}</a>
+    class="{{ base_style }} {% if request.path == url %}{{ active_style }}{% else %}{{ inactive_style }}{% endif %}">
+    {{ name }}</a>
 {% endmacro %}
 
 {% macro mobile_nav_link(request, url, name) %}
+{% set base_style = "block border-l-4 py-2 pl-3 pr-4 text-base font-medium" %}
+{% set active_style = "border-indigo-500 bg-indigo-50 text-indigo-700" %}
+{% set inactive_style = "border-transparent text-gray-500 hover:border-gray-300 hover:bg-gray-50 hover:text-gray-700" %}
 <a href="{{ url }}"
-    class="block rounded-md bg-gray-900 px-3 py-2 text-base font-medium text-white {% if request.path == url %}bg-gray-900 text-white{% endif %}">{{
-    name }}</a>
+    class="{{ base_style }} {% if request.path == url %}{{ active_style }}{% else %}{{ inactive_style }}{% endif %}">
+    {{ name }}</a>
 {% endmacro %}
 
-<nav class="bg-gray-800">
-    <div class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8">
-        <div class="relative flex h-16 items-center justify-between">
-            <div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
-                <!-- Mobile menu button-->
-                <button type="button"
-                    class="relative inline-flex items-center justify-center rounded-md p-2 text-gray-400 hover:bg-gray-700 hover:text-white focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white"
+
+<nav class="bg-white shadow">
+    <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
+        <div class="flex h-16 justify-between">
+
+            <div class="hidden sm:ml-6 sm:flex sm:space-x-8">
+                {% for link in links %}
+                {{ nav_link(request, url_for('index') + link.anchor, link.text) }}
+                {% endfor %}
+            </div>
+
+            <div class="-mr-2 flex items-center sm:hidden">
+                <!-- Mobile menu button -->
+                <button type="button" id="mobile-menu-button"
+                    class="relative inline-flex items-center justify-center rounded-md p-2 text-gray-400 hover:bg-gray-100 hover:text-gray-500 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500"
                     aria-controls="mobile-menu" aria-expanded="false">
                     <span class="absolute -inset-0.5"></span>
                     <span class="sr-only">Open main menu</span>
-                    <!--
-              Icon when menu is closed.
-
-              Menu open: "hidden", Menu closed: "block"
-            -->
+                    <!-- Icon when menu is closed. Menu open: "hidden", Menu closed: "block" -->
                     <svg class="block h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
                         aria-hidden="true">
                         <path stroke-linecap="round" stroke-linejoin="round"
                             d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
                     </svg>
-                    <!--
-              Icon when menu is open.
-
-              Menu open: "block", Menu closed: "hidden"
-            -->
+                    <!-- Icon when menu is open. Menu open: "block", Menu closed: "hidden" -->
                     <svg class="hidden h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
                         aria-hidden="true">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
                     </svg>
                 </button>
             </div>
-            <div class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-start">
-                <div class="flex flex-shrink-0 items-center">
-                    <img class="h-8 w-auto" src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=500"
-                        alt="Your Company">
-                </div>
-                <div class="hidden sm:ml-6 sm:block">
-                    <div class="flex space-x-4">
-                        <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
-                        {{ nav_link(request, url_for('index'), 'Home') }}
-                        {{ nav_link(request, url_for('index') + '#about', 'About') }}
-                        {{ nav_link(request, url_for('index') + '#sponsor', 'Sponsor') }}
-                    </div>
-                </div>
-            </div>
         </div>
     </div>
 
     <!-- Mobile menu, show/hide based on menu state. -->
-    <div class="sm:hidden" id="mobile-menu">
-        <div class="space-y-1 px-2 pb-3 pt-2">
-            {{ mobile_nav_link(request, url_for('index'), 'Home') }}
-            {{ mobile_nav_link(request, url_for('index') + '#about', 'About') }}
-            {{ mobile_nav_link(request, url_for('index') + '#sponsor', 'Sponsor') }}
+    <div class="hidden" id="mobile-menu">
+        <div class="space-y-1 pb-3 pt-2">
+            {% for link in links %}
+            {{ mobile_nav_link(request, url_for('index') + link.anchor, link.text) }}
+            {% endfor %}
         </div>
     </div>
 </nav>
