--- a/src/pyrva/templates/components/about_pyrva.html
+++ b/src/pyrva/templates/components/about_pyrva.html
@@ -1,10 +1,15 @@
+{#
+Basic info about PyRVA
+#}
 <div class="bg-gray-50" id="about">
     <div class="mx-auto max-w-7xl py-24 sm:px-2 sm:py-32 lg:px-4">
       <div class="mx-auto max-w-2xl px-4 lg:max-w-none">
         <div class="grid grid-cols-1 items-center gap-x-16 gap-y-10 lg:grid-cols-2">
           <div>
             <h2 class="text-4xl font-bold tracking-tight text-gray-900">We're here to help you level up with Python!</h2>
-            <p class="mt-4 text-gray-500">At the beginning at least, but then we realized we could make a lot more money if we kinda stopped caring about that. Our new strategy is to write a bunch of things that look really good in the headlines, then clarify in the small print but hope people don't actually read it.</p>
+            <p class="mt-4 text-gray-500">
+              Founded in 2015, PyRVA is a community of Python developers in Richmond, VA. We host monthly meetups, workshops, and social events to help you learn, grow, and connect with other Pythonistas.
+            </p>
           </div>
           <div class="aspect-h-2 aspect-w-3 overflow-hidden rounded-lg bg-gray-100">
             <img src="{{ url_for('static', filename='images/stock/pexels-olia-danilevich-4974920.jpg') }}" alt="" class="object-cover object-center">
@@ -13,29 +18,29 @@
         <div class="mt-16 grid grid-cols-1 gap-x-8 gap-y-10 lg:grid-cols-3">
           <div class="sm:flex lg:block">
             <div class="sm:flex-shrink-0">
-              <img class="h-16 w-16" src="https://tailwindui.com/img/ecommerce/icons/icon-shipping-simple.svg" alt="">
+              {% include 'icons/skill.svg' %}
             </div>
             <div class="mt-4 sm:ml-6 sm:mt-0 lg:ml-0 lg:mt-6">
-              <h3 class="text-sm font-medium text-gray-900">Free shipping</h3>
-              <p class="mt-2 text-sm text-gray-500">It&#039;s not actually free we just price it into the products. Someone&#039;s paying for it, and it&#039;s not us.</p>
+              <h3 class="text-sm font-medium text-gray-900">All skill levels welcome</h3>
+              <p class="mt-2 text-sm text-gray-500">Conversation is the best way to learn. Weather you're just starting out or a seasoned veteran, there's something to learn.</p>
             </div>
           </div>
           <div class="sm:flex lg:block">
             <div class="sm:flex-shrink-0">
-              <img class="h-16 w-16" src="https://tailwindui.com/img/ecommerce/icons/icon-warranty-simple.svg" alt="">
+              {% include 'icons/community.svg' %}
             </div>
             <div class="mt-4 sm:ml-6 sm:mt-0 lg:ml-0 lg:mt-6">
-              <h3 class="text-sm font-medium text-gray-900">10-year warranty</h3>
-              <p class="mt-2 text-sm text-gray-500">If it breaks in the first 10 years we&#039;ll replace it. After that you&#039;re on your own though.</p>
+              <h3 class="text-sm font-medium text-gray-900">All identities welcome</h3>
+              <p class="mt-2 text-sm text-gray-500">PyRVA firmly believes that diversity is a strength. We welcome members of all races, genders, and backgrounds.</p>
             </div>
           </div>
           <div class="sm:flex lg:block">
             <div class="sm:flex-shrink-0">
-              <img class="h-16 w-16" src="https://tailwindui.com/img/ecommerce/icons/icon-exchange-simple.svg" alt="">
+               {% include 'icons/barbell.svg' %}
             </div>
             <div class="mt-4 sm:ml-6 sm:mt-0 lg:ml-0 lg:mt-6">
-              <h3 class="text-sm font-medium text-gray-900">Exchanges</h3>
-              <p class="mt-2 text-sm text-gray-500">If you don&#039;t like it, trade it to one of your friends for something of theirs. Don&#039;t send it here though.</p>
+              <h3 class="text-sm font-medium text-gray-900">>2,000 Members Strong</h3>
+              <p class="mt-2 text-sm text-gray-500">As one of the more active tech meetups in RVA, we've got a lot of friends in our community.</p>
             </div>
           </div>
         </div>
