--- a/src/pyrva/templates/components/footer.html
+++ b/src/pyrva/templates/components/footer.html
@@ -1,3 +1,9 @@
+{#
+Site footer
+
+Provides links to the main sections of the site and social media links.
+This has the extra link to the "Meeting" page that is not in the site nav.
+#}
 {% macro footer_link(name, href) %}
 <div class="pb-6">
     <a href="{{ href }}" class="text-sm leading-6 text-gray-600 hover:text-gray-900">{{ name }}</a>
@@ -14,8 +20,11 @@
 <footer class="bg-white">
     <div class="mx-auto max-w-7xl overflow-hidden px-6 py-10 sm:py-14 lg:px-8">
         <nav class="-mb-6 columns-2 sm:flex sm:justify-center sm:space-x-12" aria-label="Footer">
+            {{ footer_link('Home', url_for('index')) }}
             {{ footer_link('About', url_for('index') + '#about') }}
+            {{ footer_link('Community', url_for('index') + '#community') }}
             {{ footer_link('Sponsor', url_for('index') + 'sponsor') }}
+            {{ footer_link('FAQ', url_for('index') + 'faq') }}
             {{ footer_link('Meeting', url_for('meeting')) }}
         </nav>
         <div class="mt-10 flex justify-center space-x-10">
