--- a/src/pyrva/templates/components/hero.html
+++ b/src/pyrva/templates/components/hero.html
@@ -1,19 +1,31 @@
+{#
+Hero component for the home page.
+
+This is the first thing people will see when they load the page. It's mean to be a welcome message for new visitors and
+a call to action for them to join the community.
+#}
 <div class="relative isolate" id="home">
     <div class="overflow-hidden">
         <div class="mx-auto max-w-7xl px-6 pb-32 pt-36 sm:pt-60 lg:px-8 lg:pt-32">
             <div class="mx-auto max-w-2xl gap-x-14 lg:mx-0 lg:flex lg:max-w-none lg:items-center">
                 <div class="relative w-full max-w-xl lg:shrink-0 xl:max-w-2xl">
-                    <img src="{{ url_for('static', filename='images/logo.png') }}" alt="PyRVA Logo" width="408" height="139" />
-                    <h1 class="text-4xl font-bold tracking-tight text-gray-900 sm:text-6xl">Richmond's Python Community</h1>
-                    <p class="mt-6 text-lg leading-8 text-gray-600 sm:max-w-md lg:max-w-none">Cupidatat minim id magna
-                        ipsum sint dolor qui. Sunt sit in quis cupidatat mollit aute velit. Et labore commodo nulla
-                        aliqua proident mollit ullamco exercitation tempor. Sint aliqua anim nulla sunt mollit id
-                        pariatur in voluptate cillum.</p>
+                    <img src="{{ url_for('static', filename='images/logo.png') }}" alt="PyRVA Logo" width="408"
+                        height="139" />
+                    <h1 class="text-4xl font-bold tracking-tight text-gray-900 sm:text-6xl">Richmond's Python Community
+                    </h1>
+                    <p class="mt-6 text-lg leading-8 text-gray-600 sm:max-w-md lg:max-w-none">
+                        Welcome to PyRVA! We are a friendly and diverse community of Python enthusiasts, from beginners
+                        to seasoned professionals. Join us for engaging talks, hands-on workshops, and networking
+                        opportunities that help you grow your skills and connect with fellow coders. Whether you're
+                        looking to start your Python journey or deepen your expertise, we welcome you to be a part of
+                        our vibrant group!
+                    </p>
                     <div class="mt-10 flex items-center gap-x-6">
-                        <a href="#"
+                        <a href="#community"
                             class="rounded-md bg-indigo-600 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">
                             Join the Community!</a>
-                        <a href="#" class="text-sm font-semibold leading-6 text-gray-900">Become a Speaker</a>
+                        <a href="#faq" class="text-sm font-semibold leading-6 text-gray-900" id="speak">Become a
+                            Speaker</a>
                     </div>
                 </div>
                 <div class="mt-14 flex justify-end gap-8 sm:-mt-44 sm:justify-start sm:pl-20 lg:mt-0 lg:pl-0">
