--- a/src/pyrva/templates/components/sponsor_pricing.html
+++ b/src/pyrva/templates/components/sponsor_pricing.html
@@ -45,19 +45,19 @@ The perks are defined in /data/sponsor_perks.json.
       {% endfor %}
     </div>
 
-    <div class="max-w-2xl mx-auto mt-6 text-lg leading-8 text-center text-gray-600 space-y-4">
+    <div class="max-w-2xl mx-auto mt-6 space-y-4 text-lg leading-8 text-center text-gray-600">
       <p>
         PyRVA is a
-        <a class="text-blue-600 font-semibold" href="https://www.python.org/psf/fiscal-sponsorees/">Fiscal Sponsoree</a>
+        <a class="font-semibold text-blue-600" href="https://www.python.org/psf/fiscal-sponsorees/">Fiscal Sponsoree</a>
         of the
-        <a class="text-blue-600 font-semibold" href="https://www.python.org/psf-landing/">Python Software
+        <a class="font-semibold text-blue-600" href="https://www.python.org/psf-landing/">Python Software
           Foundation</a>.
         As such, we qualify as a 501(c)(3) non-profit organization.
         All donations are made to the PSF in our name.
       </p>
       <p>
         Intereseted in a different method of sponsoring PyRVA? Reach out to one of our
-        <a href="#organizers" class="text-blue-600 font-semibold">organizers</a>.
+        <a href="#organizers" class="font-semibold text-blue-600">organizers</a>.
       </p>
     </div>
 
