--- a/src/pyrva/templates/components/hero.html
+++ b/src/pyrva/templates/components/hero.html
@@ -6,10 +6,10 @@ a call to action for them to join the community.
 #}
 <div class="relative isolate" id="home">
     <div class="overflow-hidden">
-        <div class="mx-auto max-w-7xl px-6 pb-32 pt-36 sm:pt-60 lg:px-8 lg:pt-32">
-            <div class="mx-auto max-w-2xl gap-x-14 lg:mx-0 lg:flex lg:max-w-none lg:items-center">
+        <div class="px-6 pb-32 mx-auto max-w-7xl pt-36 sm:pt-60 lg:px-8 lg:pt-32">
+            <div class="max-w-2xl mx-auto gap-x-14 lg:mx-0 lg:flex lg:max-w-none lg:items-center">
                 <div class="relative w-full max-w-xl lg:shrink-0 xl:max-w-2xl">
-                    <img src="{{ url_for('static', filename='images/logo.png') }}" alt="PyRVA Logo" width="408"
+                    <img src="{{ url_for('static', filename='images/logo.webp') }}" alt="PyRVA Logo" width="408"
                         height="139" />
                     <h1 class="text-4xl font-bold tracking-tight text-gray-900 sm:text-6xl">Richmond's Python Community
                     </h1>
@@ -20,7 +20,7 @@ a call to action for them to join the community.
                         looking to start your Python journey or deepen your expertise, we welcome you to be a part of
                         our vibrant group!
                     </p>
-                    <div class="mt-10 flex items-center gap-x-6">
+                    <div class="flex items-center mt-10 gap-x-6">
                         <a href="#community"
                             class="rounded-md bg-indigo-600 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">
                             Join the Community!</a>
@@ -28,46 +28,51 @@ a call to action for them to join the community.
                             Speaker</a>
                     </div>
                 </div>
-                <div class="mt-14 flex justify-end gap-8 sm:-mt-44 sm:justify-start sm:pl-20 lg:mt-0 lg:pl-0">
+                <div class="flex justify-end gap-8 mt-14 sm:-mt-44 sm:justify-start sm:pl-20 lg:mt-0 lg:pl-0">
                     <div
-                        class="ml-auto w-44 flex-none space-y-8 pt-32 sm:ml-0 sm:pt-80 lg:order-last lg:pt-36 xl:order-none xl:pt-80">
+                        class="flex-none pt-32 ml-auto space-y-8 w-44 sm:ml-0 sm:pt-80 lg:order-last lg:pt-36 xl:order-none xl:pt-80">
                         <div class="relative">
-                            <img src="{{ url_for('static', filename='images/stock/pexels-jopwell-2422281.jpg') }}"
-                                alt="" class="aspect-[2/3] w-full rounded-xl bg-gray-900/5 object-cover shadow-lg">
+                            <img src="{{ url_for('static', filename='images/stock/pexels-jopwell-2422281.webp') }}"
+                                width="176" height="264" alt=""
+                                class="aspect-[2/3] w-full rounded-xl bg-gray-900/5 object-cover shadow-lg">
                             <div
-                                class="pointer-events-none absolute inset-0 rounded-xl ring-1 ring-inset ring-gray-900/10">
+                                class="absolute inset-0 pointer-events-none rounded-xl ring-1 ring-inset ring-gray-900/10">
                             </div>
                         </div>
                     </div>
-                    <div class="mr-auto w-44 flex-none space-y-8 sm:mr-0 sm:pt-52 lg:pt-36">
+                    <div class="flex-none mr-auto space-y-8 w-44 sm:mr-0 sm:pt-52 lg:pt-36">
                         <div class="relative">
-                            <img src="{{ url_for('static', filename='images/stock/pexels-divinetechygirl-1181472.jpg') }}"
-                                alt="" class="aspect-[2/3] w-full rounded-xl bg-gray-900/5 object-cover shadow-lg">
+                            <img src="{{ url_for('static', filename='images/stock/pexels-divinetechygirl-1181472.webp') }}"
+                                width="176" height="264" alt=""
+                                class="aspect-[2/3] w-full rounded-xl bg-gray-900/5 object-cover shadow-lg">
                             <div
-                                class="pointer-events-none absolute inset-0 rounded-xl ring-1 ring-inset ring-gray-900/10">
+                                class="absolute inset-0 pointer-events-none rounded-xl ring-1 ring-inset ring-gray-900/10">
                             </div>
                         </div>
                         <div class="relative">
-                            <img src="{{ url_for('static', filename='images/stock/pexels-divinetechygirl-1181359.jpg') }}"
-                                alt="" class="aspect-[2/3] w-full rounded-xl bg-gray-900/5 object-cover shadow-lg">
+                            <img src="{{ url_for('static', filename='images/stock/pexels-divinetechygirl-1181359.webp') }}"
+                                width="176" height="264" alt=""
+                                class="aspect-[2/3] w-full rounded-xl bg-gray-900/5 object-cover shadow-lg">
                             <div
-                                class="pointer-events-none absolute inset-0 rounded-xl ring-1 ring-inset ring-gray-900/10">
+                                class="absolute inset-0 pointer-events-none rounded-xl ring-1 ring-inset ring-gray-900/10">
                             </div>
                         </div>
                     </div>
-                    <div class="w-44 flex-none space-y-8 pt-32 sm:pt-0">
+                    <div class="flex-none pt-32 space-y-8 w-44 sm:pt-0">
                         <div class="relative">
-                            <img src="{{ url_for('static', filename='images/stock/pexels-canvastudio-3153198.jpg') }}"
-                                alt="" class="aspect-[2/3] w-full rounded-xl bg-gray-900/5 object-cover shadow-lg">
+                            <img src="{{ url_for('static', filename='images/stock/pexels-canvastudio-3153198.webp') }}"
+                                width="176" height="264" alt=""
+                                class="aspect-[2/3] w-full rounded-xl bg-gray-900/5 object-cover shadow-lg">
                             <div
-                                class="pointer-events-none absolute inset-0 rounded-xl ring-1 ring-inset ring-gray-900/10">
+                                class="absolute inset-0 pointer-events-none rounded-xl ring-1 ring-inset ring-gray-900/10">
                             </div>
                         </div>
                         <div class="relative">
-                            <img src="{{ url_for('static', filename='images/stock/pexels-fauxels-3184317.jpg') }}"
-                                alt="" class="aspect-[2/3] w-full rounded-xl bg-gray-900/5 object-cover shadow-lg">
+                            <img src="{{ url_for('static', filename='images/stock/pexels-fauxels-3184317.webp') }}"
+                                width="176" height="264" alt=""
+                                class="aspect-[2/3] w-full rounded-xl bg-gray-900/5 object-cover shadow-lg">
                             <div
-                                class="pointer-events-none absolute inset-0 rounded-xl ring-1 ring-inset ring-gray-900/10">
+                                class="absolute inset-0 pointer-events-none rounded-xl ring-1 ring-inset ring-gray-900/10">
                             </div>
                         </div>
                     </div>
