--- a/src/pyrva/templates/components/sponsor_list.html
+++ b/src/pyrva/templates/components/sponsor_list.html
@@ -5,10 +5,10 @@ Display all sponsors sorted by tier
     {% for tier, sponsor_list in sponsors.items() %}
     {% if sponsor_list %}
     <div class="py-8 sm:py-18">
-        <h2 class="mt-2 text-4xl font-bold tracking-tight text-gray-500 sm:text-5xl text-center">{{ tier|title }}
+        <h2 class="mt-2 text-4xl font-bold tracking-tight text-center text-gray-500 sm:text-5xl">{{ tier|title }}
             Sponsors
         </h2>
-        <div class="flex justify-center my-8 gap-8">
+        <div class="flex justify-center gap-8 my-8">
             {% for sponsor in sponsor_list %}
             {% include 'components/sponsor_card.html' %}
             {% endfor %}
