--- a/src/pyrva/templates/components/sponsor_card.html
+++ b/src/pyrva/templates/components/sponsor_card.html
@@ -1,5 +1,6 @@
 <a href="{{ sponsor.url }}" target="_blank" rel="noopener noreferrer"
-    class="flex flex-col items-center justify-center border shadow-md rounded-lg p-4 grayscale hover:border-blue-800 hover:grayscale-0">
-    <img src="{{ url_for('static', filename=sponsor.logo) }}" alt="{{ sponsor.name }}" width="192" height="192
-                    title=" {{ sponsor.name }}" class="mt-4 w-48 h-48 object-contain" />
+    class="flex flex-col items-center justify-center p-4 border rounded-lg shadow-md grayscale hover:border-blue-800 hover:grayscale-0">
+    <img src="{% if sponsor.logo.startswith('http') %}{{ sponsor.logo }}{% else %}{{ url_for('static', filename=sponsor.logo) }}{% endif %}"
+        alt="{{ sponsor.name }}" width="192" height="192
+                    title=" {{ sponsor.name }}" class="object-contain w-48 h-48 mt-4" />
 </a>
