--- a/src/pyrva/templates/pages/meeting.html
+++ b/src/pyrva/templates/pages/meeting.html
@@ -55,7 +55,7 @@
 
         <section id="event"
             class="flex flex-col items-center justify-between gap-4 p-16 border rounded-lg shadow-lg basis-1/2 bg-white/50">
-            <img class="w-3/5 rounded-lg" src="{{ event.large_image }}" alt="{{ event.title }}" width="600"
+            <img class="w-3/5 rounded-lg" src="{{ event.image }}" alt="{{ event.title }}" width="600"
                 height="338" />
             <h1 class="text-5xl font-bold text-center">{{ event.title }}</h1>
             <div class="flex w-full justify-evenly">
